<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dd_background"
    android:id="@+id/drawer_layout"
    tools:context=".DogProfile">

    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">

            <include
                layout="@layout/main_toolbar"/>

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/dog_profile_title"
                android:text="@string/create_your_dogs_profile"
                android:textSize="25sp"
                android:textAlignment="center"
                android:fontFamily="@font/coiny"
                android:textColor="@color/bronze"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp">

                <TextView
                    android:id="@+id/dog_name_id"
                    android:text="@string/dog_name_text_view"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/dog_name_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:hint="@string/dog_name_edit_text"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/dog_breed_id"
                    android:text="@string/dog_breed_text_view"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <AutoCompleteTextView
                    android:id="@+id/dog_breed_text_id"
                    android:hint="@string/dog_breed_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text=""
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/dog_gender_id"
                    android:text="@string/dog_gender_text_view"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_group">
                    <RadioButton
                        android:id="@+id/dog_gender_male_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/male"
                        android:textSize="20sp"/>

                    <RadioButton
                        android:id="@+id/dog_gender_female_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/female"
                        android:textSize="20sp"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/dog_age_id"
                    android:text="@string/dog_age_text_view"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/margin_start"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/dog_age_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/dog_age_edit_text"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/dog_size_id"
                    android:text="@string/dog_size_text_view"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/size_group">
                    <RadioButton
                        android:id="@+id/dog_size_small_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/small"
                        android:textSize="18sp"/>

                    <RadioButton
                        android:id="@+id/dog_size_medium_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/medium"
                        android:textSize="18sp"/>

                    <RadioButton
                        android:id="@+id/dog_size_large_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/large"
                        android:textSize="18sp"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dog_bio_text_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dog_bio"
                    android:textSize="20sp"
                    android:layout_marginStart="@dimen/margin_start">
                </TextView>

                <EditText
                    android:id="@+id/dog_bio_edit_text_id"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:lines="5"
                    android:maxLines="5"
                    android:hint="@string/dog_bio_edit_text"
                    android:imeOptions="actionDone"
                    android:layout_marginStart="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <Button
                android:id="@+id/nextButton"
                android:text="@string/next_button_text"
                android:layout_marginTop="30dp"
                android:layout_marginStart="165dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="nextButtonHandler"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white">

    <include
        layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>