<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Your Preference"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/coiny"
            android:textColor="@color/bronze"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dogs:"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="30dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/dog_breed_id"
                android:text="@string/preference_breed_text_view"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <AutoCompleteTextView
                android:id="@+id/dog_breed_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:imeOptions="actionDone"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/OwnerGenderText"
                android:text="preference gender:"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genderGroup">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:textSize="18dp"
                    android:onClick="checkButton"/>

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    android:textSize="18dp"
                    android:onClick="checkButton"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp">
            <TextView
                android:id="@+id/dog_size_id"
                android:text="@string/preference_dog_size_text_view"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sizeGroup">
                <RadioButton
                    android:id="@+id/dog_size_small_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/small"
                    android:textSize="18sp"
                    android:onClick="checkButton2"/>

                <RadioButton
                    android:id="@+id/dog_size_medium_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/medium"
                    android:textSize="18sp"
                    android:onClick="checkButton2"/>

                <RadioButton
                    android:id="@+id/dog_size_large_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/large"
                    android:textSize="18sp"
                    android:onClick="checkButton2"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age of Dog:"
            android:textSize="20dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:text="Min:"/>

            <EditText
                android:id="@+id/dogMinAge"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:hint="Min Age"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:textSize="20dp"
                android:text="Max:"/>

            <EditText
                android:id="@+id/dogMaxAge"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:hint="Max Age"
                android:inputType="number"/>



        </LinearLayout>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gotoP2"
            android:layout_marginLeft="140dp"
            android:text="NEXT"
            android:textSize="20dp"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>