...
        <Button
            android:id="@+id/b_logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:ems="10"
            android:textSize="@dimen/sp_20"
            android:text="@string/log_in" />
        <Button
            android:id="@+id/b_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
