<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Your Preference"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Owner:"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="30dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/OwnerGenderText"
                android:text="preference gender:"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:id="@+id/genderGroup">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:onClick="checkButton"
                    android:textSize="18dp"/>

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    android:onClick="checkButton"
                    android:textSize="18dp"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age of Owner:"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:text="Min:"/>

            <EditText
                android:id="@+id/ownerMaxAge"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:hint="Minimum Age" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:text="Max:"/>

            <EditText
                android:id="@+id/ownerMinAge"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:hint="Maximum Age" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="States:"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/states"
            android:layout_marginTop="10dp"
            android:minHeight="60dp" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="130dp"
            android:text="Save"
            android:textSize="20dp"
            android:onClick="goToProfile"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>